--- a/admin_project/admin_project_update_delete.html
+++ b/admin_project/admin_project_update_delete.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="admin_project_register.css" rel="stylesheet">
-    <title>관리자-프로젝트 등록</title>
+    <title>관리자-프로젝트 수정</title>
 </head>
 <body>
     <div class="add-project-wrapper">
         <div class="add-project-box">
-            <div class="add-project-header">Add Project</div>
+            <div class="add-project-header">Project</div>
             <form class="add-project-form">
                 <div class="project-option">
                     <div class="today-date">2024/01/29</div>
-                    <input class="project-start-date" type="date" />
-                    <input class="project-end-date" type="date" />
+                    <input class="project-start-date" type="date" value="2024-01-29"/>
+                    <input class="project-end-date" type="date" value="2024-01-29"/>
                     <select class="project-participants">
                         <option selected>====선택====</option>
                         <option>참여자1</option>
@@ -22,9 +22,12 @@
                     </select>
                 </div>
                 <div class="project-registrant">프로젝트 등록자</div>
-                <input class="project-title" placeholder="프로젝트 제목을 입력해주세요"/>
-                <textarea class="project-content" placeholder="프로젝트 내용을 입력해주세요"></textarea>
-                <button class="add-project-btn" type="button">추가하기</button>
+                <input class="project-title" placeholder="프로젝트 제목을 입력해주세요" value="서버에서 보내준 값"/>
+                <textarea class="project-content" placeholder="프로젝트 내용을 입력해주세요">서버에서 보내준 값</textarea>
+                <div class="update-delete-btns">
+                    <button class="update-project-btn" type="button">수정하기</button>
+                    <button class="delete-project-btn" type="button">삭제하기</button>
+                </div>
             </form>
         </div>
     </div>
