관리자-프로젝트 리스트 제작중 2

--- a/admin_project_list/admin_project_list.html
+++ b/admin_project_list/admin_project_list.html
@@ -63,6 +63,17 @@
                 </tr>
             </tbody>
         </table>
+        <div class="table-options">
+            <div class="project-search">
+                <select class="search-category">
+                    <option>프로젝트 이름</option>
+                    <option>등록자</option>
+                </select>
+                <input class="search-input" type="search">
+                <button class="search-btn" type="button">검색</button>
+            </div>
+            <button class="to-calender-btn" type="button">달력</button>
+        </div>
     </div>
 </body>
 </html>
