유저 업무 수정 삭제 페이지 제작

--- a/user_work/user_work_register.html
+++ b/user_work/user_work_register.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="user_work_register.css" rel="stylesheet">
-    <title>일정 등록</title>
+    <title>일정 수정</title>
 </head>
 <body>
     <div class="add-work-wrapper">
         <div class="add-work-box">
             <div class="add-work-header">Daily Work</div>
             <form class="add-work-form">
-                <input class="work-data" type="date" value="2024-01-08" disabled/>
+                <input class="work-data" type="text" value="2024-01-08" disabled/>
                 <select class="work-project">
                     <option selected>프로젝트를 선택하세요</option>
                     <option>프로젝트1</option>
