일정 등록 / 수정 title 오류 수정

--- a/user_work/user_work_update_delete.html
+++ b/user_work/user_work_update_delete.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="user_work_register.css" rel="stylesheet">
-    <title>일정 등록</title>
+    <title>일정 수정</title>
 </head>
 <body>
     <div class="add-work-wrapper">
